dnl Process this file with autoconf to produce a configure script.
AC_INIT(pgpdump.c)

dnl Checks for programs.
dnl AC_PROG_INSTALL

dnl Checks for libraries.
AC_CHECK_LIB(z, inflate)
AC_CHECK_LIB(bz2, BZ2_bzBuffToBuffDecompress)

dnl Checks for header files.
AC_CONFIG_HEADER(config.h)
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(sys/time.h)
AC_CHECK_HEADERS(unixlib/local.h)
AC_HEADER_TIME

dnl Checks for typedefs, structures, and compiler characteristics.
AC_STRUCT_TIMEZONE

dnl Checks for library functions.

AC_OUTPUT(Makefile)
